--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
